<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="30dp"
        android:layout_marginHorizontal="10dp"
        android:background="#f1f1f1"
        android:collapseColumns="">

        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/name"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/rarity"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/note"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/date"
                android:textStyle="bold" />

        </TableRow>

        <TableRow>
            <TextView
                android:id="@+id/text_view_idName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test"
                android:layout_weight="1"
                android:gravity="center"
                android:background="#ffffff"
                android:layout_marginBottom="1dp"
                android:layout_marginHorizontal="1dp"/>

            <TextView
                android:id="@+id/text_view_idRarity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test"
                android:layout_weight="1"
                android:gravity="center"
                android:background="#ffffff"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="1dp"/>

            <TextView
                android:id="@+id/text_view_idNote"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test"
                android:layout_weight="1"
                android:gravity="center"
                android:background="#ffffff"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="1dp"/>

            <TextView
                android:id="@+id/text_view_idDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/test"
                android:layout_weight="1"
                android:gravity="center"
                android:background="#ffffff"
                android:layout_marginRight="1dp"
                android:layout_marginBottom="1dp"/>

        </TableRow>



    </TableLayout>

    <Button
        android:id="@+id/switchBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnAdd"
        android:layout_gravity="center"
        android:onClick="addMore"/>
</LinearLayout>